# aruco_detector_ocv

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: aruco_opencv.rviz
data/: big_coordinate.xcf  big_coordinate2.xcf  coordinate_sys.xcf  marker1-5.xcf  markers_to_print.xcf  markers_to_print_ordered.xcf
launch/: detector.launch  libuvc_start.launch  marker_filter.launch
scripts/: marker_filter.py
src/: aruco_detector_ocv.cpp
